--- a/Template/bootstrap/partials/left-sidebar.html
+++ b/Template/bootstrap/partials/left-sidebar.html
@@ -96,6 +96,9 @@
                         <li>
                             <a href="/masters?entity=wfseq&amp;type=i">workflow Matrix</a>
                         </li>
+                        <li>
+                            <a href="/view_access">Access Control</a>
+                        </li>
                     </ul>
                 </div>
             </li>
