--- a/Template/bootstrap/partials/topbar.html
+++ b/Template/bootstrap/partials/topbar.html
@@ -358,7 +358,7 @@
                     </span>
                     <span class="d-lg-flex flex-column gap-1 d-none">
                         <h5 class="my-0">{{ full_name }}</h5>
-                        <h6 class="my-0 fw-normal">Operator</h6>
+                        <h6 class="my-0 fw-normal">{{role_name}}</h6>
                     </span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown">
